--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">movil</string>
+    <string name="placeholder_search">Buscar</string>
+    <string name="botonRegistrar">Registrar</string>
+    <string name="botonCancelar">Cancelar</string>
+    <string name="placeholderTarea">Ingreas nombre de tarea</string>
+    <string name="placeholderDescripcion">Descripcion</string>
+    <string name="labelTarea">Tarea</string>
+    <string name="labelDescripcion">Escribe...</string>
 </resources>
