--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,6 @@
     <string name="placeholderDescripcion">Descripcion</string>
     <string name="labelTarea">Tarea</string>
     <string name="labelDescripcion">Escribe...</string>
+    <string name="placeholderBuscar">Buscar</string>
+    <string name="labelBuscar">Bucar</string>
 </resources>
