--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="labelDescripcion">Escribe...</string>
     <string name="placeholderBuscar">Buscar</string>
     <string name="labelBuscar">Bucar</string>
+    <string name="nombreActicvidd" />
 </resources>
